Safari Mobile Alignment Test Fix 1

--- a/css/styles.index.css
+++ b/css/styles.index.css
@@ -236,12 +236,12 @@ h1.sectionhead {
 }
 @media (max-width: 700px) {
   .list {
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
   }
   .listside {
-    max-width: none;
-    width: 100%;
+    /* max-width: 90%; */
+    width: 90%;
     justify-content: center;
     align-items: center;
   }
